--- a/dmu32/dmu32_SA13/SA13_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SA13/SA13_catalogue_merging.ipynb
@@ -42,7 +42,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE = True\n",
-    "MAKE_FINAL = False\n",
+    "MAKE_FINAL = True\n",
     "\n",
     "SUFFIX = '20180501'"
    ]
@@ -522,7 +522,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "\n",
