--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -27,7 +27,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-11-02 17:58:45.590432\n"
+      "2019-11-05 15:18:49.703742\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140042425382000-344632\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140063370413224-437689\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
@@ -158,14 +158,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140042425382000-344632').dataTable()\");\n",
+       "    console.log(\"$('#table140063370413224-437689').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140042425382000-344632').dataTable({\n",
+       "    $('#table140063370413224-437689').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -480,7 +480,7 @@
       "0 dmu_products/dmu26/dmu26_XID+SPIRE_SA13/data/dmu26_XID+SPIRE_SA13_cat_20191024.fits ../dmu26/dmu26_XID+SPIRE_SA13/data/dmu26_XID+SPIRE_SA13_cat_20191024.fits\n",
       "  - xid: dmu_products/dmu26/dmu26_XID+SPIRE_SA13/data/dmu26_XID+SPIRE_SA13_cat_20191024.fits\n",
       "  - photoz: dmu_products/dmu24/dmu24_SA13/data/SA13_DESI-DR7_Zou_et_al_2019_photo_z_withhelp_id.fits\n",
-      "  - cigale not done.\n",
+      "  - cigale: dmu_products/dmu28/dmu28_SA13/data/zphot/HELP_final_results.fits\n",
       "HATLAS-SGP:\n",
       "0 dmu_products/dmu26/dmu26_XID+SPIRE_SGP/data/dmu26_XID+SPIRE_SGP_20180625.fits ../dmu26/dmu26_XID+SPIRE_SGP/data/dmu26_XID+SPIRE_SGP_20180625.fits\n",
       "  - xid: dmu_products/dmu26/dmu26_XID+SPIRE_SGP/data/dmu26_XID+SPIRE_SGP_20180625.fits\n",
@@ -571,7 +571,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140042404067704-699833\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140063370163368-185679\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>35319</td><td>107241</td><td>0</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td><td>211453</td><td>139070</td><td>566</td></tr>\n",
@@ -589,7 +589,7 @@
        "<tr><td>13</td><td>Herschel-Stripe-82</td><td>20180307</td><td>20190205</td><td>50196455</td><td>363.22747930641884</td><td>127047306240</td><td>127.05 GB</td><td>76084</td><td>21613821</td><td>0</td></tr>\n",
        "<tr><td>14</td><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.413863402949218</td><td>5195931840</td><td>5.2 GB</td><td>242065</td><td>1382438</td><td>46719</td></tr>\n",
        "<tr><td>15</td><td>NGP</td><td>20180219</td><td>20190204</td><td>6759591</td><td>177.6981971077162</td><td>4954806720</td><td>4.95 GB</td><td>1233547</td><td>3175339</td><td>185290</td></tr>\n",
-       "<tr><td>16</td><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.27416379328431184</td><td>2721600</td><td>2.72 MB</td><td>812</td><td>2891</td><td>0</td></tr>\n",
+       "<tr><td>16</td><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.27416379328431184</td><td>2721600</td><td>2.72 MB</td><td>812</td><td>2891</td><td>70</td></tr>\n",
        "<tr><td>17</td><td>SGP</td><td>20180221</td><td>20180221</td><td>29790690</td><td>294.5684540900642</td><td>45192530880</td><td>45.19 GB</td><td>3511594</td><td>17057212</td><td>352804</td></tr>\n",
        "<tr><td>18</td><td>SPIRE-NEP</td><td>20180220</td><td>20180220</td><td>2674</td><td>0.1280660469377391</td><td>1203840</td><td>1.2 MB</td><td>0</td><td>935</td><td>0</td></tr>\n",
        "<tr><td>19</td><td>SSDF</td><td>20180221</td><td>20180221</td><td>12661903</td><td>111.11624949343539</td><td>8078319360</td><td>8.08 GB</td><td>0</td><td>9268783</td><td>0</td></tr>\n",
@@ -619,14 +619,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140042404067704-699833').dataTable()\");\n",
+       "    console.log(\"$('#table140063370163368-185679').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140042404067704-699833').dataTable({\n",
+       "    $('#table140063370163368-185679').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -662,8 +662,8 @@
       "      This is a total of 10800251 objects with an average of 7% of objects on processed areas.\n",
       "Photo-zs: There are 23 fields with photozs computed totalling 1269.11 square degrees.\n",
       "      This is a total of 94338384 objects with an average of 55% of objects on processed areas.\n",
-      "CIGALE SEDs: There are 16 fields with SEDs computed totalling 780.93 square degrees.\n",
-      "      This is a total of 1155443 objects with an average of 1% of objects on processed areas.\n"
+      "CIGALE SEDs: There are 17 fields with SEDs computed totalling 781.21 square degrees.\n",
+      "      This is a total of 1155513 objects with an average of 1% of objects on processed areas.\n"
      ]
     }
    ],
