AKARI-NEP input ready

--- a/dmu28/dmu28_AKARI-NEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_AKARI-NEP/CIGALE_catalogue_preparation.ipynb
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "555631"
+       "531746"
       ]
      },
      "execution_count": 3,
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of good sources: 2718\n"
+      "Number of good sources: 2695\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/AKARI-NEP_cigale_best_extcor_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/AKARI-NEP_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
