--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "1407877 (Mon Feb 4 12:56:29 2019 +0000)\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-11-05 14:49:24.144548\n"
+      "2019-11-05 15:52:40.552408\n"
      ]
     }
    ],
@@ -271,8 +271,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:984: RuntimeWarning: invalid value encountered in less\n",
-      "  result = getattr(super(), op)(other)\n"
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
      ]
     }
    ],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
