--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-11-05 15:52:40.552408\n"
+      "2019-11-06 12:44:59.991576\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE = True\n",
-    "MAKE_FINAL = False"
+    "MAKE_FINAL = True"
    ]
   },
   {
@@ -490,7 +490,7 @@
     "if MAKE_FINAL:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_AKARI-NEP/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_AKARI-NEP/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -633,7 +633,18 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column cigale_chi2_opt has missing data\n",
+      "Column cigale_chi2_ir has missing data\n",
+      "Column cigale_chi2_red has missing data\n",
+      "Column cigale_chi2_ironly has missing data\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL:\n",
     "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
