--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -27,7 +27,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2019-11-06 12:46:16.215789\n"
+      "2019-11-06 12:48:56.944546\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table139802953665840-402568\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140294775711056-442211\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
@@ -158,14 +158,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table139802953665840-402568').dataTable()\");\n",
+       "    console.log(\"$('#table140294775711056-442211').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table139802953665840-402568').dataTable({\n",
+       "    $('#table140294775711056-442211').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -368,7 +368,7 @@
       "2 dmu_products/dmu26/dmu26_XID+SPIRE_AKARI-NEP/data/dmu26_XID+SPIRE_AKARI-NEP_cat_20190312.fits ../dmu26/dmu26_XID+SPIRE_AKARI-NEP/data/dmu26_XID+SPIRE_AKARI-NEP_cat_20190312.fits\n",
       "  - xid: dmu_products/dmu26/dmu26_XID+SPIRE_AKARI-NEP/data/dmu26_XID+SPIRE_AKARI-NEP_cat_20190312.fits\n",
       "  - photoz: dmu_products/dmu24/dmu24_AKARI-NEP/data/AKARI-NEP_DESI-DR8_Zou_et_al_2019_photo_z_withhelp_id.fits\n",
-      "  - cigale not done.\n",
+      "  - cigale: dmu_products/dmu28/dmu28_AKARI-NEP/data/zphot/HELP_final_results.fits\n",
       "AKARI-SEP:\n",
       "0 dmu_products/dmu26/dmu26_XID+MIPS_AKARI-SEP/data/dmu26_XID+MIPS_AKARI-SEP_cat_20190909.fits ../dmu26/dmu26_XID+MIPS_AKARI-SEP/data/dmu26_XID+MIPS_AKARI-SEP_cat_20190909.fits\n",
       "  - xid: dmu_products/dmu26/dmu26_XID+MIPS_AKARI-SEP/data/dmu26_XID+MIPS_AKARI-SEP_cat_20190909.fits\n",
@@ -571,9 +571,9 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table139800450691984-274887\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140294775012600-583462\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
-       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>35319</td><td>107241</td><td>0</td></tr>\n",
+       "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>35319</td><td>107241</td><td>1240</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td><td>211453</td><td>139070</td><td>566</td></tr>\n",
        "<tr><td>2</td><td>Bootes</td><td>20180520</td><td>20190201</td><td>3481661</td><td>11.42815299095486</td><td>5002044480</td><td>5 GB</td><td>495159</td><td>1657470</td><td>38660</td></tr>\n",
        "<tr><td>3</td><td>CDFS-SWIRE</td><td>20180613</td><td>20180613</td><td>2171051</td><td>12.971246403717068</td><td>5705593920</td><td>5.71 GB</td><td>240489</td><td>139532</td><td>9308</td></tr>\n",
@@ -619,14 +619,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table139800450691984-274887').dataTable()\");\n",
+       "    console.log(\"$('#table140294775012600-583462').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table139800450691984-274887').dataTable({\n",
+       "    $('#table140294775012600-583462').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -662,8 +662,8 @@
       "      This is a total of 10800251 objects with an average of 7% of objects on processed areas.\n",
       "Photo-zs: There are 23 fields with photozs computed totalling 1269.11 square degrees.\n",
       "      This is a total of 94338384 objects with an average of 55% of objects on processed areas.\n",
-      "CIGALE SEDs: There are 17 fields with SEDs computed totalling 781.21 square degrees.\n",
-      "      This is a total of 1155513 objects with an average of 1% of objects on processed areas.\n"
+      "CIGALE SEDs: There are 18 fields with SEDs computed totalling 790.40 square degrees.\n",
+      "      This is a total of 1156753 objects with an average of 1% of objects on processed areas.\n"
      ]
     }
    ],
