SPIRE-NEP ready for CIGALE

--- a/dmu32/dmu32_SPIRE-NEP/SPIRE-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SPIRE-NEP/SPIRE-NEP_catalogue_merging.ipynb
@@ -14,22 +14,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True"
+    "MAKE_CIGALE_INPUT = True\n",
+    "MAKE_FINAL = False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -56,10 +53,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../../dmu1/dmu1_ml_SPIRE-NEP/data/master_catalogue_spire-nep_20180220.fits'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-d655abaebb9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mSUFFIX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'20180220'\u001b[0m \u001b[0;31m#??\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m ml = Table.read(\n\u001b[0;32m----> 4\u001b[0;31m     \"../../dmu1/dmu1_ml_SPIRE-NEP/data/master_catalogue_spire-nep_{}.fits\".format(SUFFIX))\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/connect.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregistry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0;31m# For some readers (e.g., ascii.ecsv), the returned `out` class is not\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/io/registry.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(cls, format, *args, **kwargs)\u001b[0m\n\u001b[1;32m    506\u001b[0m                     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    507\u001b[0m                         \u001b[0mctx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_readable_fileobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'binary'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 508\u001b[0;31m                         \u001b[0mfileobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__enter__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    509\u001b[0m                     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    510\u001b[0m                         \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/herschelhelp_internal/lib/python3.6/contextlib.py\u001b[0m in \u001b[0;36m__enter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__enter__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"generator didn't yield\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/utils/data.py\u001b[0m in \u001b[0;36mget_readable_fileobj\u001b[0;34m(name_or_obj, encoding, cache, show_progress, remote_timeout)\u001b[0m\n\u001b[1;32m    191\u001b[0m                 \u001b[0mname_or_obj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcache\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow_progress\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshow_progress\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m                 timeout=remote_timeout)\n\u001b[0;32m--> 193\u001b[0;31m         \u001b[0mfileobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFileIO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_obj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    194\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_url\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m             \u001b[0mdelete_fds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../dmu1/dmu1_ml_SPIRE-NEP/data/master_catalogue_spire-nep_20180220.fits'"
+     ]
+    }
+   ],
    "source": [
     "# Master list\n",
     "SUFFIX = '20180220' #??\n",
@@ -71,26 +82,24 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# # XID+ MIPS24\n",
+    "# XID+ MIPS24\n",
     "\n",
-    "# xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "#                           \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
-    "# xid_mips24.meta = None\n",
+    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_SPIRE-NEP/data/\"\n",
+    "                          \"dmu26_XID+MIPS_SPIRE-NEP_cat_20191107.fits\")\n",
+    "xid_mips24.meta = None\n",
     "\n",
-    "# # Adding the error column\n",
-    "# xid_mips24.add_column(Column(\n",
-    "#     data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
-    "#                  xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_mips_24\"\n",
-    "# ))\n",
-    "# xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "# xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
+    "# Adding the error column\n",
+    "xid_mips24.add_column(Column(\n",
+    "    data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
+    "                 xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_mips_24\"\n",
+    "))\n",
+    "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
+    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
    ]
   },
   {
@@ -143,46 +152,46 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ SPIRE\n",
+    "# XID+ SPIRE\n",
     "\n",
-    "# xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
-    "#                          \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
-    "# xid_spire.meta = None\n",
+    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_SPIRE-NEP/data/\"\n",
+    "                         \"dmu26_XID+SPIRE_SPIRE-NEP_cat_20191107.fits\")\n",
+    "xid_spire.meta = None\n",
     "\n",
-    "# xid_spire['HELP_ID'].name = \"help_id\"\n",
+    "xid_spire['HELP_ID'].name = \"help_id\"\n",
     "\n",
-    "# # Convert from mJy to μJy\n",
-    "# for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
-    "#             \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
-    "#             \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
-    "#     xid_spire[col] *= 1000\n",
+    "# Convert from mJy to μJy\n",
+    "for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
+    "            \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
+    "            \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
+    "    xid_spire[col] *= 1000\n",
     "\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
-    "#                  xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_250\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
-    "#                  xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_350\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
-    "#                  xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_500\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
+    "                 xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_250\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
+    "                 xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_350\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
+    "                 xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_500\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
-    "# xid_spire = xid_spire['help_id',\n",
-    "#                       'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
-    "#                       'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
-    "#                       'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
+    "xid_spire = xid_spire['help_id',\n",
+    "                      'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
+    "                      'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
+    "                      'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
    ]
   },
   {
@@ -253,15 +262,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(ml, xid_mips24, join_type='left')\n",
+    " merged_table = join(ml, xid_mips24, join_type='left')\n",
     "\n",
-    "# # Fill values\n",
-    "# for col in xid_mips24.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_mips24.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -291,26 +300,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
     "        \n",
-    "# # Fill values\n",
-    "# for col in xid_spire.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merged_table = ml"
+    "# Fill values\n",
+    "for col in xid_spire.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -392,7 +390,7 @@
     }
    ],
    "source": [
-    "if FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_CIGALE_INPUT:\n",
     "    \n",
     "    # Sorting the columns\n",
     "    bands_tot = [col[2:] for col in merged_table.colnames\n",
@@ -443,10 +441,10 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_SPIRE-NEP/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -504,7 +502,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    merged_table = join(merged_table, cigale, join_type='left')\n",
     "\n",
@@ -534,7 +532,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    bands = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
@@ -549,7 +547,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "    for band in bands:\n",
@@ -580,7 +578,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    # Check that we did not forget any column\n",
     "    assert set(columns) == set(merged_table.colnames)"
@@ -601,7 +599,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    merged_table[columns].write(\"data/SPIRE-NEP.fits\")"
    ]
@@ -624,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
