SPIRE NEP ready for final run

--- a/dmu28/dmu28_SPIRE-NEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SPIRE-NEP/CIGALE_catalogue_preparation.ipynb
@@ -111,7 +111,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of good sources: 99\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
@@ -292,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of sources with z-spec: 1\n"
+      "Number of sources with z-spec: 0\n"
      ]
     }
    ],
@@ -370,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
